syntax = "proto3";

option go_package = "github.com/baely/demo-grpc/go/gen";
option java_package = "org.example.gen.protos";

service HelloWorldService {
    rpc HelloWorld (HelloWorldRequest) returns (HelloWorldResponse);
}

message HelloWorldRequest {
    string service = 1;
    string name = 2;
}

message HelloWorldResponse {
    string service = 1;
    string message = 2;
}
